--- a/src/components/organisms/main/mark-side-card/mark.module.css
+++ b/src/components/organisms/main/mark-side-card/mark.module.css
@@ -70,6 +70,11 @@
     width: 65% !important;
 } */
 /* -------------------------------media screen---------------------- */
+@media screen and (max-width: 1360px) {
+.markCard{
+    width: 380px;
+}
+}
 @media screen and (max-width: 1024px) {
     .mark img{
         width: 50%;
