--- a/src/components/organisms/main/ourclients/our-clients.css
+++ b/src/components/organisms/main/ourclients/our-clients.css
@@ -16,19 +16,24 @@
 .cartAnimation img {
   width: 350px;
 }
+
 .OurClients_Slide_Media_Video {
   width: 150px;
 }
-.OurClients_Slide_Media_Video img{
+
+.OurClients_Slide_Media_Video img {
   width: 70px;
 }
 
 @media (max-width:768px) {
 
   .rating_image {
-
     margin-inline: auto;
     display: block;
-
+    margin-bottom: 25px;
+  }
+  .OurClients_Card_Two_Content{
+    margin-bottom: 20px;
+    text-align: center;
   }
 }
