--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -198,7 +198,7 @@ section.sales_option_box {
 
 .opinion-box-content {
   padding: 50px 25px;
-  width: 65%;
+  width: 55%;
   background-color: white;
   float: right;
   margin: 50px 0px 50px 0px;
@@ -212,17 +212,7 @@ section.sales_option_box {
 }
 
 .opinion-box-text {
-  font-size: 40px;
-  font-family: 'Georgia';
-  color: rgb(81, 81, 81);
-  line-height: 1.25;
-  text-align: center;
-  margin-bottom: 40px;
-  letter-spacing: -0.025em;
-}
-
-.opinion-box-text {
-  font-size: 40px;
+  font-size: 32px;
   font-family: 'Georgia';
   color: rgb(81, 81, 81);
   line-height: 1.25;
@@ -1153,6 +1143,9 @@ section#sec1 {
 }
 
 @media only screen and (max-width: 767px) {
+  .copywriter-ksiazka-img{
+    margin-top: 50px;
+  }
   .copywriter-custom-container-2{
     padding: 20px;
   }
