--- a/src/app/zamow/zamow.css
+++ b/src/app/zamow/zamow.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(70vw 70vw at top center, #f8c459 0, #e3e3e3 41%);
+  background: radial-gradient(70vw 70vw at top center, #a2e5fb 0, #f4f4f4 41%);
   z-index: -1;
 }
 
