--- a/src/components/organisms/main/rating-captions/rating.module.css
+++ b/src/components/organisms/main/rating-captions/rating.module.css
@@ -22,6 +22,9 @@
   gap: 80px;
   margin: 40px 0 0px;
 }
+.ratingLogoImg img{
+  width: 65%;
+}
 
 .ratingMainImg {
   width: 100%;
@@ -38,6 +41,7 @@
 
 .ratingMainImg p {
   text-align: center;
+  margin-top: 100px;
 }
 
 .ratingMainImg p span {
@@ -128,7 +132,7 @@
     display: block;
   }
   .ratingLogoImg img {
-    width: 65%;
+    width: 95%;
     display: block;
     margin: 0 auto 20px;
   }
@@ -138,6 +142,6 @@
   }
 
   .ratingMainImg img {
-    margin: 0;
+    margin: -120px 0 -90px;
   }
 }
