--- a/src/components/organisms/logo/logo.css
+++ b/src/components/organisms/logo/logo.css
@@ -11,3 +11,7 @@ button.download-catalog-button-2.projects-download-catalog-button.send-offer-but
   /* background: #d4aa28; */
   background-color: #009ad2;
 }
+
+.image-810 img {
+  width: 100%;
+}
