--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,10 @@ body {
   z-index: -10;
   opacity: 0.8;
 }
+.OurClients_Marquee.full.mobile{
+  margin-top: -100px;
+  margin-bottom: 100px;
+}
 
 /* * */
 .content {
@@ -171,7 +175,8 @@ body {
   align-items: center;
 }
 .OurClients_Slide_Media {
-  display: flex;
+  display: grid;
+  grid-template-columns: 40% 1fr;
 }
 .OurClients_Slide_Button {
   align-self: end;
@@ -214,7 +219,7 @@ body {
   justify-content: center;
   gap: 0.52em;
   border-radius: 5.21em;
-  background-color: #ffc600;
+  background-color: var(--brand-blue);
   padding: 0.52em;
   font-weight: bold;
   box-shadow: 0px 0.15em black;
