--- a/src/app/nazwa-dla-firmy/nazwa.css
+++ b/src/app/nazwa-dla-firmy/nazwa.css
@@ -192,7 +192,7 @@ img.names-custom-image {
   text-align: center;
   margin-top: 42px;
   padding: 95px 10px 10px 10px;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 
 .names-client-desc {
@@ -588,6 +588,14 @@ section.projects-gray-opinion-4 {
 }
 
 @media only screen and (max-width: 767px) {
+  .pnazw-page .new-wierzymy .img-wierzymy{
+    right: inherit;
+    top: inherit;
+    position: relative;
+    width: 70%;
+    display: block;
+    margin-inline: auto;
+  }
   img.owocnych-nazw-text {
     width: 90%;
   }
