--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -178,7 +178,7 @@ img.hardImg {
 .order .orderImg {
   border-radius: 0px 50px 50px 0px;
   overflow: hidden;
-  background-image: linear-gradient(45deg, #d79126, #a56118);
+  background-image: linear-gradient(45deg, #ffffff, #ffffff);
 }
 
 .order .orderImg img {
@@ -225,7 +225,7 @@ img.hardImg {
 
 .pinkBG {
   padding: 50px 0;
-  background-image: linear-gradient(173deg, #f5f5f5 53%, #fbb1b6);
+  background-image: linear-gradient(173deg, #f4f4f4 53%, #00bfff3f);
 }
 
 .socialVideo video {
