--- a/src/components/organisms/team/team.module.css
+++ b/src/components/organisms/team/team.module.css
@@ -9,15 +9,18 @@
 .bannerContent {
   margin-top: -60px;
 }
+.zespolVideo{
+  min-height: 650px;
+}
 
 .bannerHeading {
-  padding: 100px 100px 250px;
+  padding: 100px 100px 100px;
 }
 
 .bannerHeading h1 {
   font-size: 100px;
   font-weight: 900;
-  color: rgba(255, 255, 255, 0.592);
+  color: #3e3e3e;
   text-align: center;
 }
 
@@ -54,7 +57,7 @@
 }
 
 .bannerBottomContent img {
-  position: absolute;
+  /* position: absolute; */
   top: -270px;
   left: 70px;
   width: 100%;
@@ -69,7 +72,7 @@
 }
 
 .bannerBottomContent h2 span {
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), var(--brand-blue));
   border-radius: 20px;
   padding: 0 10px 0 0;
   display: inline-block;
@@ -140,7 +143,7 @@
 
 .personalCard h6 span {
   font-weight: 800;
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), var(--brand-blue));
   padding: 0 10px 0 0;
   border-radius: 20px;
 }
@@ -171,20 +174,20 @@
 .mainHeading h2 span,
 .teamContent h2 span {
   font-weight: 800;
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), var(--brand-blue));
   padding: 0 10px 0 0;
   border-radius: 20px;
   display: inline-block;
 }
 
 .mainHeading button {
-  border: 3px solid #ffc600;
+  border: 3px solid var(--brand-blue);
   padding: 10px 50px;
   border-radius: 100px;
   font-size: 23px;
   font-weight: 700;
   color: black;
-  background: #ffc600;
+  background: var(--brand-blue);
   margin: 50px auto 0;
   display: block;
   box-shadow: 0 0 0 0 black, 0em 0.2em 0 0 black;
@@ -193,6 +196,7 @@
 
 .mainHeading button:hover {
   box-shadow: none;
+  background-color: var(--brand-blue-hover);
 }
 
 .mainHeading a {
@@ -245,7 +249,7 @@
 
 .teamContent h2 span {
   font-weight: 800;
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), var(--brand-blue));
   padding: 0 10px 0 0;
   border-radius: 20px;
   display: inline-block;
@@ -368,7 +372,7 @@
   font-weight: 800;
   padding: 0 0 0 10px;
   border-radius: 20px;
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), var(--brand-blue));
 }
 
 .cultureImg {
@@ -530,7 +534,7 @@
 /* -------------------------------------media screen -------------------------------- */
 @media only screen and (max-width: 1360px) {
   .bannerBottomContent img {
-    margin: -200px 0 0;
+    margin:  0;
     width: 100%;
   }
 
@@ -681,6 +685,14 @@
   .teamContent {
     margin: 0px auto 50px;
   }
+  .zespolVideo {
+    min-height: 500px;
+}
+}
+@media only screen and (max-width: 900px) {
+  .zespolVideo {
+    min-height: 400px;
+}
 }
 
 @media only screen and (max-width: 767px) {
@@ -701,8 +713,8 @@
   }
 
   .bannerBottomContent img {
-    margin: -60px 0 0 auto;
-    width: 70%;
+    margin:  auto;
+    width: 100%;
     display: block;
     top: 0;
   }
@@ -758,7 +770,14 @@
   }
 
   .Support p {
-    margin-top: 180px !important;
+    margin-top: 370px !important;
+    margin-bottom: 150px;
+  }
+  .zespolVideo {
+    min-height: 350px;
+}
+  .OurClients{
+    margin-bottom: 80px;
   }
 
   .Support h4 {
@@ -881,7 +900,7 @@
   }
 
   .mainHeading {
-    margin: 50px 50px 0 0px;
+    margin: 0px;
   }
 
   .mainHeading h2 {
@@ -904,6 +923,7 @@
   .zespolVideo {
     width: 100% !important;
     overflow: hidden;
+    
   }
 
   .creativePara {
@@ -917,4 +937,9 @@
   .BannerBotImg {
     min-height: 0px;
   }
+}
+@media only screen and (max-width: 450px) {
+  .zespolVideo {
+    min-height: 250px;
+}
 }
