fix bug in multiple screen

--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -182,17 +182,19 @@ img.hardImg {
 }
 
 .order .orderImg img {
-  width: 100%;
+  width: 75%;
+  display: block;
+  margin: 30px auto 0;
 }
 
 .ratingContent {
-  margin-top: -300px;
+  margin-top: 0px;
   padding: 50px;
 }
 
 .ratingContent p {
   font-size: 20px;
-  color: white;
+  color: #3e3e3e;
   text-align: center;
 }
 
