--- a/src/components/organisms/footer/footer.module.css
+++ b/src/components/organisms/footer/footer.module.css
@@ -26,7 +26,7 @@
 .footerRightMenu a:hover {
   translate: 5px;
   transition-duration: 0.2s;
-  color: #e74a50;
+  color: var(--brand-blue);
 }
 
 .footerLogo img {
