--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -140,7 +140,9 @@
   position: absolute;
   z-index: 0;
 }
-
+.mobile{
+  display: none;
+}
 /* ----------------------------------media screen------------------------------------ */
 @media screen and (max-width: 1520px) {
   .heroImg1 {
@@ -165,7 +167,7 @@
   }
 
   .hero {
-    max-height: 565px;
+    max-height: 715px;
   }
 
   .subtitleContainer {
@@ -228,8 +230,15 @@
 }
 
 @media screen and (max-width: 767px) {
+  .desktop{
+    display: none;
+  }
+  .mobile{
+    display: block;
+  }
   .heroVideo {
     padding: 180px 0 250px;
+    top: -180px;
   }
 
   .hero {
