--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -524,7 +524,9 @@ body {
   margin-inline: auto;
   margin-top: 20px;
 }
-
+video{
+  filter: contrast(0.998);
+}
 @media only screen and (max-width: 1024px) {
   .brandImgBtn {
     margin: 30px 0 0;
