--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -94,7 +94,7 @@
 
 .gradientBG {
   font-weight: 600;
-  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), var(--brand-blue));
   padding: 0 10px;
   border-radius: 100px;
   display: inline-block;
@@ -106,11 +106,12 @@
 
 .hardResult h4 {
   font-size: 45px;
-  text-align: left;
+  text-align: center;
   font-weight: 500;
   color: #333333;
-  margin: 0 0 50px 0px;
   line-height: normal;
+  max-width: 500px;
+  margin: 0 auto 50px;
 }
 
 .hardResult h4 span {
@@ -129,6 +130,10 @@
 img.hardImg {
   margin: 0 0 50px;
 }
+.helmetVideo{
+  margin: 0 auto;
+}
+
 
 /* ================================================== order================================= */
 .order {
