--- a/src/components/organisms/team/team.module.css
+++ b/src/components/organisms/team/team.module.css
@@ -457,8 +457,7 @@
   /* background: #00000069; */
   /* padding: 25% 0 0; */
   z-index: 0;
-
-  padding: 80px 0;
+  padding: 30px 0 60px;
 }
 
 .peopleVideoContent .projectBtn {
