--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -72,8 +72,8 @@
 .fs_input:focus,
 .fs_input:active,
 .uds_input-container input:focus {
-  border-color: #d21e00;
-  outline: #d21e00;
+  border-color: var(--brand-blue);
+  outline: var(--brand-blue);
 }
 
 .fs_input {
@@ -141,13 +141,13 @@
 }
 
 .component-two_section textarea:focus {
-  outline: 1.5px solid #d21e00;
+  outline: 1.5px solid var(--brand-blue);
 }
 
 .range_description {
-  max-width: 300px;
+  /* max-width: 300px; */
   margin-inline: auto;
-  text-align: left;
+  text-align: center;
   margin-top: 20px;
   font-size: 17px;
   line-height: 30px;
@@ -175,18 +175,18 @@
 }
 
 .componentThree_input-container input:focus {
-  outline: 2px solid #d21e00;
+  outline: 2px solid var(--brand-blue);
 }
 
 button.custom-modal-btn {
   padding: 8px 36px;
-  background: #d21e00;
+  background: var(--brand-blue);
   font-size: 18px;
   border-radius: 50px;
   color: white;
   border: none;
   font-weight: 500;
-  box-shadow: 0 6px 0px #981a04;
+  box-shadow: 0 6px 0px var(--brand-blue);
   margin: 0 auto;
   display: block;
 }
