fix: apply OS-specific class for video component on Mac and Windowsr

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -528,6 +528,15 @@ video {
   -webkit-filter: contrast(0.979);
   filter: contrast(0.979);
 }
+.win video{
+  -webkit-filter: contrast(0.999);
+  filter: contrast(0.999);
+}
+
+.mac video {
+  -webkit-filter: contrast(0.979);
+  filter: contrast(0.979);
+}
 @media only screen and (max-width: 1024px) {
   .brandImgBtn {
     margin: 30px 0 0;
