--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -915,6 +915,7 @@ section#sec1 {
 
   .copywriter-container-custom {
     margin-top: 0px;
+    margin-bottom: 40px;
   }
 
   .copywriting-white-text-cont {
@@ -1510,6 +1511,12 @@ section#sec1 {
     background: black;
     padding: 50px 0 50px;
   }
+  .copywriter-image-box-3{
+    margin-top: 30px;
+  }
+  .copywriter-image-box-4 {
+    margin-top: -40px;
+}
 }
 
 @media only screen and (max-width: 450px) {
