fix: resolve bug in nazwa screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -485,6 +485,10 @@ body {
     font-size: 20.6px;
     padding-inline: 10px;
   }
+  .OurClients_Marquee.full.mobile {
+    margin-top: -100px;
+    margin-bottom: 140px;
+}
 }
 
 /* Brand Carousal Button */
