--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -673,9 +673,9 @@ img.copywriter-owocni {
   padding-top: 100px;
 }
 
-.thematic-section {
+/* .thematic-section {
   background: #fff;
-}
+} */
 
 .copywriter-cname {
   margin-top: 40px;
