--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -216,7 +216,10 @@
   .heroBtn {
     display: block;
     margin: 0 auto;
-    width: 270px;
+    width: 300px;
+  }
+  .heroBtn button{
+    padding: 10px 40px;
   }
 
   .heroBtn a {
