fix(header): update hover color for cennik button

--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -365,6 +365,9 @@
 .blackMenu .navRightMenu a{
   color: white;
 }
+.blackMenu:hover .headerLeftBtn a{
+  color: black;
+}
 /* ------------------------------------media screen-------------------------------------------------------- */
 @media screen and (max-width: 1450px) {
   .headerRightBtn {
