--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -50,10 +50,17 @@
   border: 3px solid #00bfff;
   padding: 10px 20px;
   border-radius: 100px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   color: white;
   background: transparent;
+  width: 100%;
+}
+.heroBtn .umow {
+  border: 3px solid #00bfff;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-size: 18px !important;
 }
 
 .heroBtn button:hover {
