fix: update border color for cennik button

--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -445,8 +445,8 @@
 
  
   .mobileLeftBtn {
-    box-shadow: 0px 3px 0px #ffffff;
-    border: 2px solid #ffffff;
+    box-shadow: 0px 3px 0px var(--brand-blue);
+    border: 2px solid var(--brand-blue);
   }
 }
 
