--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -21,7 +21,7 @@
   padding: 5px 30px;
   background: transparent;
   color: white;
-  /* box-shadow: 0px 3px 0px #c1c1c1; */
+  box-shadow: 0px 4px 0px var(--brand-blue);
   border: 2px solid var(--brand-blue);
   font-weight: 500;
   font-size: 16px;
@@ -242,7 +242,7 @@
 }
 
 .mobileLeftBtn a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -252,7 +252,7 @@
   align-items: center;
   padding: 1rem;
   background-color: transparent;
-  color: white;
+  color: black;
 }
 
 .logo {
@@ -453,5 +453,11 @@
 @media (max-width: 768px) {
   .nav {
     top: 80px;
+  }
+  .blackMenu .mobileLeftBtn a{
+color: white;
+  }
+  .blackMenu .header{
+color: white;
   }
 }
