--- a/src/components/organisms/ux/flip/flip.css
+++ b/src/components/organisms/ux/flip/flip.css
@@ -6,6 +6,8 @@
     border: none;
     background-color: transparent;
     padding: 0;
+    align-items: center;
+    justify-content: center;
 }
 
 .innerCard {
