--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -21,7 +21,7 @@
   padding: 5px 30px;
   background: transparent;
   color: white;
-  box-shadow: 0px 4px 0px var(--brand-blue);
+  /* box-shadow: 0px 4px 0px var(--brand-blue); */
   border: 2px solid var(--brand-blue);
   font-weight: 500;
   font-size: 16px;
@@ -235,7 +235,7 @@
   padding: 5px 15px;
   background: transparent;
   color: white;
-  box-shadow: 0px 3px 0px #c1c1c1;
+  /* box-shadow: 0px 3px 0px #c1c1c1; */
   border: 2px solid #eaeaea;
   font-weight: 500;
   font-size: 14px;
@@ -445,7 +445,7 @@
 
  
   .mobileLeftBtn {
-    box-shadow: 0px 3px 0px var(--brand-blue);
+    /* box-shadow: 0px 3px 0px var(--brand-blue); */
     border: 2px solid var(--brand-blue);
   }
 }
