--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -48,7 +48,7 @@
 
 .heroBtn button {
   border: 3px solid #00bfff;
-  padding: 10px 20px;
+  padding: 12px 45px;
   border-radius: 100px;
   font-size: 18px;
   font-weight: 700;
@@ -78,7 +78,7 @@
   font-size: 20px;
   color: white;
   font-weight: 700;
-  margin: 10px 0 0px;
+  margin: 0px 0 0px;
 }
 
 .heroBtn img {
@@ -144,6 +144,12 @@
 }
 .mobile{
   display: none;
+}
+.heroBtn .umow {
+  border: 3px solid #00bfff;
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-size: 18px !important;
 }
 /* ----------------------------------media screen------------------------------------ */
 @media screen and (max-width: 1520px) {
