--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -168,10 +168,11 @@
 
 .componentThree_input-container input {
   padding: 12px 16px;
-  margin: 0 10px 18px auto;
+  margin: 0 auto 18px ;
   border-radius: 40px;
   width: 45%;
   border: 1px solid rgb(201, 201, 201);
+  display: block;
 }
 
 .componentThree_input-container input:focus {
