--- a/src/components/organisms/ux/flip/flip.css
+++ b/src/components/organisms/ux/flip/flip.css
@@ -120,9 +120,9 @@
 }
 
 .typingEffect{
-    font-size: 30px;
-    font-weight: 600;
-    color: white;
+    font-size: 20px;
+    /* font-weight: 600; */
+    color: gray;
     text-transform: uppercase;
     margin-top: 20px;
 }
