--- a/src/app/cennik/cennik.css
+++ b/src/app/cennik/cennik.css
@@ -8,6 +8,7 @@
   font-weight: 300;
   max-width: 600px;
   margin-inline: auto;
+  margin-bottom: 50px;
 }
 
 .card-heading {
@@ -48,7 +49,7 @@
   border: none;
   font-weight: 500;
   box-shadow: 0 6px 0px var(--brand-blue-hover);
-  margin: 20px auto;
+  margin: 10px auto 20px;
 }
 
 .cennikBtn:hover {
