--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -155,7 +155,11 @@
   font-size: 17px;
   line-height: 30px;
   display: flex;
+  flex-direction: column;
   align-items: center;
+}
+.range_description span{
+  margin-bottom: 20px;
 }
 
 
