--- a/src/components/organisms/ux/flip/flip.css
+++ b/src/components/organisms/ux/flip/flip.css
@@ -130,7 +130,7 @@
 .flipCardContainer{
     margin-top: 0px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
 }
