--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -515,7 +515,7 @@
 
 .referenceCard .cardTop {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   gap: 10px;
 }
 
@@ -527,7 +527,9 @@
 .referenceCard .cardTop p {
   font-size: 13px;
 }
-
+.cardTop svg{
+  font-size: 15px;
+}
 .referenceCard p {
   font-size: 16px;
 }
